# chess

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  Makefile  README.md  build.zig  build.zig.zon  package-lock.json  package.json
libc/: web-libc.txt
resources/shaders/chessboard/: chessboard.fs
resources/shaders/piece/: piece.fs
src/: chess-engine.cpp  chess-engine.hpp  config.h  gui.cpp  gui.hpp  main.cpp  menu.hpp  multiplayer.cpp  multiplayer.hpp
src/signaling-server/: README.md  package-lock.json  package.json  pnpm-lock.yaml
src/signaling-server/src/: index.ts
src/signaling-server/src/events/: disconnect.event.ts  message.event.ts
src/signaling-server/src/libs/: server.ts
src/signaling-server/src/services/: activeCount.service.ts  sendAnsSDP.service.ts  sendICE.service.ts  socket.service.ts
src/signaling-server/src/test/: wsCleint.ts
src/signaling-server/src/types/: action.ts  ws.ts
src/signaling-server/src/utils/: activeClient.ts  activeRoom.ts  eventloader.utils.ts  wsAction.ts
